14-kubernetes-cloud-05-network-policies-security-context/14.5/policies/Ingress/00-deny-ingress-all.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name:   default-deny-ingress
spec:
  podSelector: {}
  egress:
  - {}
  policyTypes:
  - Egress
