14-kubernetes-cloud-05-network-policies-security-context/14.5/policies/Ingress/01-allow-internal-network.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-multitool-traffic
spec:
  podSelector:
    matchLabels:
      app: test
      tier: prod
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: multitool
          pod-template-hash: 546689b6bb
